package com.sakamaya.booky.model.enums;

public enum ExtraTypes {
    BREAKFAST,
    LUNCH,
    DINNER,
    FRUITS,
    MUSIC,
    SPA,
    MASSAGE,
    CARE,
    EXCURSION
}
