package com.sakamaya.booky.model.enums;

public enum PaymentTypes {
    CASH,
    ONLINE
}
