package com.sakamaya.booky.model.enums;

public enum ReservationStatus {
    PENDING,
    CONFIRMED,
    CANCELED
}
