package com.sakamaya.booky.model.enums;

public enum RoomTypes {
    SINGLE,
    DOUBLE,
    TRIPLE,
    SUITE
}
